sumo/tests/sumo/extended/emitter/errors/vtypedist/false_prob/errors.sumo
Error: MSTriggeredSource emitter: Attribute 'probability' for vehicle type 'KRAUSS_DEFAULT2' is not numeric.
Quitting (on error).
